--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.9
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.3
 python-dateutil==2.8.0
 python-editor==1.0.4
 requests==2.21.0
